--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -175,6 +175,16 @@ jobs:
           override: true
       - run: ${{ matrix.deps }}
       - uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: 'toml-cli'
+      - run: |
+          TEMP_FILE="$(mktemp)"
+          toml set Cargo.toml package.version "$VERSION" > "$TEMP_FILE"
+          mv "$TEMP_FILE" Cargo.toml
+        env:
+          VERSION: '${{ steps.get_version.outputs.VERSION }}'
+      - uses: actions-rs/cargo@v1
         env:
           VERSION: '${{ steps.get_version.outputs.VERSION }}'
           REPOSITORY_NAME: '${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}'
@@ -206,6 +216,26 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: ${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}-x86_64-apple-darwin
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: 'toml-cli'
+      - run: |
+          TEMP_FILE="$(mktemp)"
+          toml set Cargo.toml package.version "$VERSION" > "$TEMP_FILE"
+          mv "$TEMP_FILE" Cargo.toml
+        env:
+          VERSION: '${{ steps.get_version.outputs.VERSION }}'
+      - uses: stefanzweifel/git-auto-commit-action@v4.1.3
+        with:
+          commit_message: Bump cargo version
+          branch: ${{ github.head_ref }}
+          file_pattern: Cargo.toml
       - id: create_release
         uses: actions/create-release@v1.0.0
         env:
