Remove v from version
Cargo doesn't like having the preceeding v in the version file.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -180,7 +180,7 @@ jobs:
           args: 'toml-cli'
       - run: |
           TEMP_FILE="$(mktemp)"
-          toml set Cargo.toml package.version "$VERSION" > "$TEMP_FILE"
+          toml set Cargo.toml package.version "${VERSION:1}" > "$TEMP_FILE"
           mv "$TEMP_FILE" Cargo.toml
         env:
           VERSION: '${{ steps.get_version.outputs.VERSION }}'
@@ -227,7 +227,7 @@ jobs:
           args: 'toml-cli'
       - run: |
           TEMP_FILE="$(mktemp)"
-          toml set Cargo.toml package.version "$VERSION" > "$TEMP_FILE"
+          toml set Cargo.toml package.version "${VERSION:1}" > "$TEMP_FILE"
           mv "$TEMP_FILE" Cargo.toml
         env:
           VERSION: '${{ steps.get_version.outputs.VERSION }}'
