--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -178,12 +178,13 @@ jobs:
         with:
           command: install
           args: 'toml-cli'
-      - run: |
+      - shell: bash
+        env:
+          VERSION: '${{ steps.get_version.outputs.VERSION }}'
+        run: |
           TEMP_FILE="$(mktemp)"
           toml set Cargo.toml package.version "${VERSION:1}" > "$TEMP_FILE"
           mv "$TEMP_FILE" Cargo.toml
-        env:
-          VERSION: '${{ steps.get_version.outputs.VERSION }}'
       - uses: actions-rs/cargo@v1
         env:
           VERSION: '${{ steps.get_version.outputs.VERSION }}'
@@ -225,12 +226,13 @@ jobs:
         with:
           command: install
           args: 'toml-cli'
-      - run: |
+      - shell: bash
+        env:
+          VERSION: '${{ steps.get_version.outputs.VERSION }}'
+        run: |
           TEMP_FILE="$(mktemp)"
           toml set Cargo.toml package.version "${VERSION:1}" > "$TEMP_FILE"
           mv "$TEMP_FILE" Cargo.toml
-        env:
-          VERSION: '${{ steps.get_version.outputs.VERSION }}'
       - uses: stefanzweifel/git-auto-commit-action@v4.1.3
         with:
           commit_message: Bump cargo version
