--- a/.github/workflows/test-and-tag.yml
+++ b/.github/workflows/test-and-tag.yml
@@ -48,6 +48,7 @@ jobs:
           default: true
       - uses: actions-rs/cargo@v1
         with:
+          args: "--locked"
           command: test
   lints:
     runs-on: ubuntu-latest
