--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -77,35 +77,14 @@ jobs:
           git config --global user.name "$GITHUB_ACTOR"
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
           brew update
+          brew tap purplebooth/homebrew-repo
       - shell: bash
         run: |
           if [ ! -f "$FORMULA_LOCATION" ] || ! grep -q "$(cat ./hash/hash)" "$FORMULA_LOCATION" ; then
-            cp formula/formula.rb "$FORMULA_LOCATION"
+            cp formula/formula.rb "$(brew --repo)/Library/Taps/purplebooth/$FORMULA_LOCATION"
           fi
         env:
           FORMULA_LOCATION: homebrew-repo/Formula/${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}.rb
-      - shell: bash
-        run: |
-          brew tap purplebooth/homebrew-repo
-          cp -r ./homebrew-repo/. "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
-      - shell: bash
-        run: |
-          cd "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          git checkout -b "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
-
-          cd "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
-          if ! git diff-index --quiet HEAD -- ; then
-            git add "$(brew --repo)/Library/Taps/purplebooth/$FORMULA_LOCATION"
-            git commit -m "fix: Update $REPOSITORY_NAME to $(echo $GIT_TAG | sed 's/^refs\/tags\///')"
-          fi
-        env:
-          GITHUB_ACTOR: ${{ github.actor }}
-          REPOSITORY_NAME: ${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}
-          GIT_TAG: ${{ github.ref }}
-          FORMULA_LOCATION: homebrew-repo/Formula/${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}.rb
-          GITHUB_TOKEN: "${{ secrets.COMMITTER_TOKEN }}"
       - shell: bash
         run: |
           brew test-bot \
@@ -148,8 +127,8 @@ jobs:
       - shell: bash
         run: |
           cd "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
-          git reset --soft HEAD~1
-          git commit --amend -C HEAD
+          git add .
+          git commit -m "fix: Update formula"
           git push -f origin "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
           brew install github/gh/gh
           gh pr create --label bottles --base main --fill || echo "this is ok, it just hasn't merged in yet"
