fix: try not commiting

--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -84,14 +84,12 @@ jobs:
         run: |
           brew tap purplebooth/repo
           cp formula/formula.rb "$(brew --repo)/Library/Taps/purplebooth/$FORMULA_LOCATION"
-          cd "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
-          git add "$(brew --repo)/Library/Taps/purplebooth/$FORMULA_LOCATION"
-          git commit -m "fix: Update $REPOSITORY_NAME to $(echo $GIT_TAG | sed 's/^refs\/tags\///')"
       - shell: bash
         run: |
           brew test-bot \
             --bintray-org="$BINTRAY_ORG" \
             --root-url="$BINTRAY_DL_URL" \
+            --tap=purplebooth/repo \
             --git-name="$GITHUB_ACTOR" \
             --git-email="$GITHUB_ACTOR@users.noreply.github.com" \
             "purplebooth/repo/$REPOSITORY_NAME"
@@ -120,6 +118,7 @@ jobs:
             --ci-upload \
             --bintray-org="$BINTRAY_ORG" \
             --root-url="$BINTRAY_DL_URL" \
+            --tap=purplebooth/repo \
             --git-name="$GITHUB_ACTOR" \
             --git-email="$GITHUB_ACTOR@users.noreply.github.com" \
             --publish
