--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -133,7 +133,7 @@ jobs:
       - shell: bash
         run: |
           cd "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
-          git push -f origin "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
+          git switch -c "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
           brew install github/gh/gh
           gh pr create --label bottles --base main --fill || echo "this is ok, it just hasn't merged in yet"
         env:
