--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -38,19 +38,23 @@ jobs:
     runs-on: macos-latest
     steps:
       - id: get_repository_name
+        name: Work out repository name
         run: echo ::set-output "name=REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}' | sed -e "s/:refs//")"
         shell: bash
       - uses: actions/download-artifact@v2
+        name: Get the updated formula
       - uses: actions/checkout@v2.3.1
         with:
           repository: PurpleBooth/homebrew-repo
           token: ${{ secrets.COMMITTER_TOKEN }}
           path: homebrew-repo
           ref: "main"
+        name: Checkout the custom tap
       - uses: actions/checkout@v2.3.1
         with:
           token: ${{ secrets.COMMITTER_TOKEN }}
           path: source-repo
+        name: Checkout the this repository
       - name: Set up Homebrew
         id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@master
@@ -64,7 +68,8 @@ jobs:
       - name: Install Homebrew Bundler RubyGems
         if: steps.cache.outputs.cache-hit != 'true'
         run: brew install-bundler-gems
-      - shell: bash
+      - name: Test the formula
+        shell: bash
         run: |
           brew update-reset
           brew test-bot --cleanup --only-cleanup-before
@@ -83,23 +88,8 @@ jobs:
           REPOSITORY_NAME: ${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}
           BINTRAY_DL_URL: https://dl.bintray.com/purplebooth/bottles-repo
           BINTRAY_ORG: purplebooth
-          UPSTREAM_PULL_REQUEST: screw-you-test-bot
       - shell: bash
-        run: |
-          curl \
-            "$BINTRAY_API_URL/packages/$BINTRAY_ORG/$REPOSITORY_NAME" \
-            -u "$HOMEBREW_BINTRAY_USER:$HOMEBREW_BINTRAY_KEY" \
-            -X POST \
-            -H 'Content-Type: application/json' \
-            -d "{ \"name\": \"$REPOSITORY_NAME\", \"vcs_url\": \"https://github.com/PurpleBooth/$REPOSITORY_NAME.git\", \"github_repo\": \"PurpleBooth/$REPOSITORY_NAME\", \"public_download_numbers\": true, \"public_stats\": true }" ||
-            echo "Package probably already exists..."
-        env:
-          HOMEBREW_BINTRAY_USER: purplebooth
-          HOMEBREW_BINTRAY_KEY: "${{ secrets.HOMEBREW_BINTRAY_KEY }}"
-          BINTRAY_API_URL: https://api.bintray.com
-          REPOSITORY_NAME: ${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}
-          BINTRAY_ORG: purplebooth
-      - shell: bash
+        name: Build binaries for the formula
         run: |
           unset GITHUB_ACTIONS
           brew test-bot \
@@ -117,8 +107,8 @@ jobs:
           HOMEBREW_BINTRAY_KEY: "${{ secrets.HOMEBREW_BINTRAY_KEY }}"
           BINTRAY_DL_URL: https://dl.bintray.com/purplebooth/bottles-repo
           BINTRAY_ORG: purplebooth
-          UPSTREAM_PULL_REQUEST: screw-you-test-bot
       - shell: bash
+        name: Reinstall gh (it's removed as part of testing the formula)
         run: |
           mkdir -p $HOME/.config/gh/
           cat > $HOME/.config/gh/config.yml <<EOF
@@ -131,6 +121,7 @@ jobs:
           GH_USERNAME: ${{ github.repository_owner }}
           GITHUB_TOKEN: ${{ secrets.COMMITTER_TOKEN }}
       - shell: bash
+        name: Open a PR on the custom tap repository
         run: |
           cd "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
           git switch -c "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
