--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -4,9 +4,11 @@
       - "*"
 jobs:
   generate-formula:
+    name: Generate Homebrew Formula
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.1
+        name: Checkout this repository
       - run: |
           curl -Lo file.tar.gz "https://github.com/$GIT_REPO/archive/$GIT_TAG.tar.gz"
           sha256sum -b file.tar.gz | awk '{ print $1 }' > hash
@@ -16,6 +18,7 @@ jobs:
         env:
           GIT_REPO: ${{ github.repository }}
           GIT_TAG: ${{ github.ref }}
+        name: Calculate the binary hash
       - uses: cuchi/jinja2-action@v1.2.0
         with:
           template: homebrew/formula.rb.j2
@@ -24,15 +27,19 @@ jobs:
             github_repo=${{ github.repository }}
             git_tag=${{ github.ref }}
             file_sha=${{ steps.hash.outputs.SHA256 }}
+        name: Generate the template
       - uses: actions/upload-artifact@v2
         with:
           name: formula
           path: ./formula.rb
+        name: Store the formula
       - uses: actions/upload-artifact@v2
         with:
           name: hash
           path: ./hash
+        name: Store the hash of the binary
   build:
+    name: Update custom tap
     needs:
       - generate-formula
     runs-on: macos-latest
@@ -118,10 +125,11 @@ jobs:
           EOF
           brew install github/gh/gh
 
-          cd "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
-          git switch -c "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
-          brew install github/gh/gh
-          gh pr create --label bottles --base main --fill || echo "this is ok, it just hasn't merged in yet"
+          git -C homebrew-repo remote add tap "$(brew --repo)/Library/Taps/purplebooth/homebrew-repo"
+          git -C homebrew-repo switch -c "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
+          git -C homebrew-repo fetch tap
+          git -C homebrew-repo merge --no-ff tap/main
+          (cd homebrew-repo && gh pr create --label bottles --base main --fill)
         env:
           REPOSITORY_NAME: ${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}
           GIT_TAG: ${{ github.ref }}
