--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -62,7 +62,7 @@ jobs:
         run: |
           git -C homebrew-repo switch -c "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
           cp formula/formula.rb "homebrew-repo/Formula/$REPOSITORY_NAME.rb"
-          git -C homebrew-repo add "homebrew-repo/Formula/$REPOSITORY_NAME.rb"
+          git -C homebrew-repo add "Formula/$REPOSITORY_NAME.rb"
           git -C homebrew-repo commit -m "Add new formula" 
           (cd homebrew-repo && gh pr create --label bottles --base main --fill)
         env:
