--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -7,8 +7,22 @@ jobs:
     name: Generate Homebrew Formula
     runs-on: ubuntu-latest
     steps:
+      - id: get_repository_name
+        name: Work out repository name
+        run: echo ::set-output "name=REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}' | sed -e "s/:refs//")"
+        shell: bash
       - uses: actions/checkout@v2.3.2
         name: Checkout this repository
+        with:
+          token: ${{ secrets.COMMITTER_TOKEN }}
+          path: main-repo
+      - uses: actions/checkout@v2.3.2
+        with:
+          repository: PurpleBooth/homebrew-repo
+          token: ${{ secrets.COMMITTER_TOKEN }}
+          path: homebrew-repo
+          ref: "main"
+        name: Checkout the custom tap
       - run: |
           curl -Lo file.tar.gz "https://github.com/$GIT_REPO/archive/$GIT_TAG.tar.gz"
           sha256sum -b file.tar.gz | awk '{ print $1 }' > hash
@@ -21,47 +35,18 @@ jobs:
         name: Calculate the binary hash
       - uses: cuchi/jinja2-action@v1.2.0
         with:
-          template: homebrew/formula.rb.j2
+          template: main-repo/homebrew/formula.rb.j2
           output_file: formula.rb
           variables: |
             github_repo=${{ github.repository }}
             git_tag=${{ github.ref }}
             file_sha=${{ steps.hash.outputs.SHA256 }}
         name: Generate the template
-      - uses: actions/upload-artifact@v2
-        with:
-          name: formula
-          path: ./formula.rb
-        name: Store the formula
-      - uses: actions/upload-artifact@v2
-        with:
-          name: hash
-          path: ./hash
-        name: Store the hash of the binary
-  build:
-    name: Update custom tap
-    needs:
-      - generate-formula
-    runs-on: macos-latest
-    steps:
-      - id: get_repository_name
-        name: Work out repository name
-        run: echo ::set-output "name=REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}' | sed -e "s/:refs//")"
-        shell: bash
-      - uses: actions/download-artifact@v2
-        name: Get the updated formula
-      - uses: actions/checkout@v2.3.2
-        with:
-          repository: PurpleBooth/homebrew-repo
-          token: ${{ secrets.COMMITTER_TOKEN }}
-          path: homebrew-repo
-          ref: "main"
-        name: Checkout the custom tap
       - shell: bash
         name: Open a PR on the custom tap repository
         run: |
           git -C homebrew-repo switch -c "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
-          cp formula/formula.rb "homebrew-repo/Formula/$REPOSITORY_NAME.rb"
+          cp formula.rb "homebrew-repo/Formula/$REPOSITORY_NAME.rb"
           git -C homebrew-repo add "Formula/$REPOSITORY_NAME.rb"
           git -C homebrew-repo commit -m "Add new formula" 
           (cd homebrew-repo && gh pr create --label bottles --base main --fill)
