--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -56,3 +56,4 @@ jobs:
           FORMULA_LOCATION: homebrew-repo/Formula/${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}.rb
           GH_USERNAME: ${{ github.repository_owner }}
           GITHUB_TOKEN: ${{ secrets.COMMITTER_TOKEN }}
+          EMAIL: ${{ github.actor }}@users.noreply.github.com
