--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -45,10 +45,11 @@ jobs:
       - shell: bash
         name: Open a PR on the custom tap repository
         run: |
-          git -C homebrew-repo switch -c "$REPOSITORY_NAME-$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
+          VERSION="$(echo $GIT_TAG | sed 's/^refs\/tags\///')"
+          git -C homebrew-repo switch -c "$REPOSITORY_NAME-$VERSION"
           cp formula.rb "homebrew-repo/Formula/$REPOSITORY_NAME.rb"
           git -C homebrew-repo add "Formula/$REPOSITORY_NAME.rb"
-          git -C homebrew-repo commit -m "Add new formula" 
+          git -C homebrew-repo commit -m "fix: Update $REPOSITORY_NAME to $VERSION"
           (cd homebrew-repo && gh pr create --label bottles --base main --fill)
         env:
           REPOSITORY_NAME: ${{ steps.get_repository_name.outputs.REPOSITORY_NAME }}
