--- a/.github/workflows/commit-message.yml
+++ b/.github/workflows/commit-message.yml
@@ -1,3 +1,4 @@
+name: Lint Commit Message
 "on":
   push:
     branches:
@@ -10,6 +11,8 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2.3.2
+        name: Checkout repository
         with:
           fetch-depth: 0
       - uses: wagoid/commitlint-github-action@v2
+        name: Lint commits
