--- a/.github/workflows/test-and-tag.yml
+++ b/.github/workflows/test-and-tag.yml
@@ -1,3 +1,4 @@
+name: Test
 "on":
   push:
     branches:
@@ -8,7 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.2
+        name: Checkout the repository
       - uses: actions/cache@v2
+        name: Cache cargo
         with:
           path: |
             ~/.cargo/registry
@@ -17,20 +20,24 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/audit-check@v1
+        name: Audit check cargo packages
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
   version:
     runs-on: ubuntu-latest
     steps:
       - uses: actions-rs/toolchain@v1
+        name: Install rust toolchain
         with:
           profile: minimal
           toolchain: stable
           default: true
       - uses: actions/checkout@v2.3.2
+        name: Checkout this repository
         with:
           fetch-depth: 0
       - uses: actions/cache@v2
+        name: Cache cargo
         with:
           path: |
             ~/.cargo/registry
@@ -39,20 +46,25 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - run: git fetch origin +refs/tags/*:refs/tags/*
+        name: Fetch the previous versions
       - id: get_previous_version
+        name: Calculate last previous version
         run: echo ::set-output name=PREVIOUS_VERSION::$(git tag | sort --version-sort | tail -n 1)
         shell: bash
       - id: get_last_common_commit
+        name: Calculate last common commit
         run: echo ::set-output name=LAST_COMMON_COMMIT::$(git merge-base "$THIS" "$PREVIOUS_VERSION")
         shell: bash
         env:
           PREVIOUS_VERSION: "${{ steps.get_previous_version.outputs.PREVIOUS_VERSION }}"
           THIS: "${{ github.sha }}"
       - uses: actions-rs/cargo@v1
+        name: Install version calculator
         with:
           command: install
           args: what-bump --force
       - run: mkdir -p ./version
+        name: Create version file directory
       - run: |
           what-bump "${LAST_COMMON_COMMIT}" --from "${PREVIOUS_VERSION:1}" > ./version/no_prefix_version
           echo "v" > ./version/prefix
@@ -60,7 +72,9 @@ jobs:
         env:
           PREVIOUS_VERSION: "${{ steps.get_previous_version.outputs.PREVIOUS_VERSION }}"
           LAST_COMMON_COMMIT: "${{ steps.get_last_common_commit.outputs.LAST_COMMON_COMMIT }}"
+        name: Calculate next version
       - uses: actions/upload-artifact@v2
+        name: Store next version
         with:
           name: version
           path: ./version/version
