--- a/.mergify.yml
+++ b/.mergify.yml
@@ -14,8 +14,11 @@ pull_request_rules:
         method: squash
   - name: automatic rebase for main when tests pass
     conditions:
-      - status-success=Lint Commit Message
-      - status-success=Test
+      - status-success=security-audit
+      - status-success=check
+      - status-success=version
+      - status-success=test
+      - status-success=lints
       - base=main
       - label=automerge-rebase
     actions:
@@ -24,11 +27,15 @@ pull_request_rules:
         method: rebase
   - name: automatic rebase for releases
     conditions:
-      - status-success=Lint Commit Message
-      - status-success=Test
+      - status-success=security-audit
+      - status-success=check
+      - status-success=version
+      - status-success=test
+      - status-success=lints
       - base=main
       - label=releases
     actions:
       merge:
         strict: smart+fasttrack
         method: rebase
+
