--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,7 +4,8 @@ pull_request_rules:
       - status-success=security-audit
       - status-success=check
       - status-success=version
-      - status-success=test
+      - status-success=test (macos-latest, echo nothing-to-install)
+      - status-success=test (ubuntu-latest, sudo apt-get install -y libxcb-shape0-dev libxcb-xfixes0-dev)
       - status-success=lints
       - base=main
       - label=automerge-squash
@@ -17,7 +18,8 @@ pull_request_rules:
       - status-success=security-audit
       - status-success=check
       - status-success=version
-      - status-success=test
+      - status-success=test (macos-latest, echo nothing-to-install)
+      - status-success=test (ubuntu-latest, sudo apt-get install -y libxcb-shape0-dev libxcb-xfixes0-dev)
       - status-success=lints
       - base=main
       - label=automerge-rebase
@@ -30,7 +32,8 @@ pull_request_rules:
       - status-success=security-audit
       - status-success=check
       - status-success=version
-      - status-success=test
+      - status-success=test (macos-latest, echo nothing-to-install)
+      - status-success=test (ubuntu-latest, sudo apt-get install -y libxcb-shape0-dev libxcb-xfixes0-dev)
       - status-success=lints
       - base=main
       - label=releases
