ci: Remove duplicated build

--- a/.versio.yaml
+++ b/.versio.yaml
@@ -13,7 +13,8 @@ projects:
     post_write: cargo fetch
 
 sizes:
-  major: [ "!" ]
-  minor: [ feat ]
-  patch: [ fix, docs, style, refactor, perf, test, chore, ci, build ]
+  major: ['!']
+  minor: [feat]
+  patch: [deps, fix, ci, docs, style, refactor, perf, test, chore, build]
+  none: []
   fail: ['*']
