Revert "ci: Remove duplicated build"
This reverts commit 578ad19ae4d26385c68f81b8cb26fe80d3a2758f.

--- a/.versio.yaml
+++ b/.versio.yaml
@@ -13,8 +13,7 @@ projects:
     post_write: cargo fetch
 
 sizes:
-  major: ['!']
-  minor: [feat]
-  patch: [deps, fix, ci, docs, style, refactor, perf, test, chore, build]
-  none: []
+  major: [ "!" ]
+  minor: [ feat ]
+  patch: [ fix, docs, style, refactor, perf, test, chore, ci, build ]
   fail: ['*']
