Revert "ci: Remove duplicated ci"
This reverts commit 43ca9d32c4bce078c3b252e65aecf1b034f2e7d9.

--- a/.versio.yaml
+++ b/.versio.yaml
@@ -15,5 +15,5 @@ projects:
 sizes:
   major: [ "!" ]
   minor: [ feat ]
-  patch: [ fix, docs, style, refactor, perf, test, chore, ci, build ]
+  patch: [ fix, docs, style, refactor, perf, test, chore, build, ci, build ]
   fail: ['*']
