Revert "ci: Remove rebinding versions"
This reverts commit bc3f42a30ae4cd4be302faa75a742cc78e27a4be.

--- a/.versio.yaml
+++ b/.versio.yaml
@@ -13,7 +13,5 @@ projects:
     post_write: cargo fetch
 
 sizes:
-  major: [ "!" ]
-  minor: [ feat ]
-  patch: [ fix, docs, style, refactor, perf, test, chore, build, ci, build ]
-  fail: ['*']
+  use_angular: true
+  none: [ build, ci ]
