Revert "ci: Ignore versio tracking tag"
This reverts commit f3d394227728cb8cc164f668903df9b70aee35b4.

--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -1,8 +1,8 @@
 name: Release to Homebrew
 "on":
   push:
-    tags-ignore:
-      - "versio-prev"
+    tags:
+      - "*"
 jobs:
   generate-formula:
     name: Generate Homebrew Formula
